govtool/mainnet/gt-backend.yaml
apiVersion: v1
kind: Service 
metadata:
  name: gt-backend-service
  labels:
    app: gt-backend-app
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 3000
    name: listener
  - protocol: TCP
    port: 80
    targetPort: 9876
    name: health-check
  selector:
    app: gt-backend-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gt-backend-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: gt-backend-app
  template:
    metadata:
      labels:
        app: gt-backend-app
    spec:
      containers:
      - name: gt-backend-app
        image: aaron255/govtool-be:0.2
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 9876
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
