govtool/mainnet/gt-frontend.yaml
apiVersion: v1
kind: Service 
metadata:
  name: gt-frontend-service
  labels:
    app: gt-frontend-app
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: gt-frontend-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gt-frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gt-frontend-app
  template:
    metadata:
      labels:
        app: gt-frontend-app
    spec:
      containers:
      - name: gt-frontend-app
        image: ghcr.io/intersectmbo/govtool-govtool-frontend:edc71a4796fdd6bc587b8d116dedecbbf2c7c1cd
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
