govtool/mainnet/gt-metadata.yaml
apiVersion: v1
kind: Service 
metadata:
  name: gt-metadata-validation-service
  labels:
    app: gt-metadata-validation-app
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    app: gt-metadata-validation-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gt-metadata-validation-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gt-metadata-validation-app
  template:
    metadata:
      labels:
        app: gt-metadata-validation-app
    spec:
      containers:
      - name: gt-metadata-validation-app
        image: ghcr.io/intersectmbo/govtool-govtool-metadata-validation:edc71a4796fdd6bc587b8d116dedecbbf2c7c1cd
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
